feat: add maintainer and key
